# LibOnvifClient

./: CMakeLists.txt  README.md
include/: LibOnvifClientAPI.h
src/comm/: onvif_comm.c  onvif_comm.h  onvif_dump.h
src/onvif/: LibOnvifClientAPI.c  stdsoap2.h  wsdd.nsmap
test/: CMakeLists.txt  test.c
